--- a/love/love.html
+++ b/love/love.html
@@ -171,8 +171,8 @@
     }
 
     const inputField = document.getElementById('inputField');
-    const textToType = "Trương Văn An";
-    const typingSpeed = 100; // milliseconds per character
+    const textToType = "Hana <3";
+    const typingSpeed = 10; // milliseconds per character
 
     let charIndex = 0;
     function typeText() {
