--- a/love/love.html
+++ b/love/love.html
@@ -215,7 +215,7 @@
     // .textLetter text h2
     let indexText = 0;
     let textLetter = document.querySelector('.textLetter h2');
-    const textLetterH2 = "Gửi em!";
+    const textLetterH2 = "You know what!";
     let timoutTextLetter;
 
     function textCharLetter(){
@@ -243,7 +243,7 @@
     // chữ của thư bạn muốn gửi
     let indexTextContent = 0;
     let textLetterContent = document.querySelector('.contentLetter');
-    const textLetterP = "1 tuần có 7 ngày. 1 ngày có 24 giờ. 1 giờ có 60 phút. 1 phút có 60 giây. Không có một ngày hoặc giờ mà tôi không nhớ bạn. Không có giây phút nào mà anh không nghĩ đến cậu. Tâm hồn và trái tim tôi tràn ngập bạn. Nhớ và yêu em nhiều lắm.";
+    const textLetterP = "In history, you're my Queen. In geography, you're my World. In biology, you're my Heart. In chemistry, you're my Oxygen. In maths, you're my X. In physics, you're my Gravity. In english, you're my poet. Love you my girl 😘";
     let timoutTextLetterContent;
     function textCharLetterContent(){
         if (indexTextContent < textLetterP.length) {
